Add pagination to revenue-stat by Product, Category. Handling case where one of the parameter is empty or null