@@ -7,6 +7,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.reddot15.be_stockmanager.dto.response.CategoryRevenueStatResponse;
 import org.reddot15.be_stockmanager.dto.response.ProductRevenueStatResponse;
 import org.reddot15.be_stockmanager.dto.response.VendorRevenueStatResponse;
+import org.reddot15.be_stockmanager.dto.response.pagination.PageResponse;
 import org.reddot15.be_stockmanager.entity.Invoice;
 import org.reddot15.be_stockmanager.entity.Product;
 import org.reddot15.be_stockmanager.entity.SaleItem;
@@ -16,12 +17,13 @@ import org.reddot15.be_stockmanager.exception.ErrorCode;
 import org.reddot15.be_stockmanager.repository.InvoiceRepository;
 import org.reddot15.be_stockmanager.repository.ProductRepository;
 import org.reddot15.be_stockmanager.repository.VendorRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -35,7 +37,12 @@ public class RevenueStatService {
     ProductRepository productRepository;
 
     @PreAuthorize("hasAuthority('VIEW_FINANCIAL_STATISTIC')")
-    public List<VendorRevenueStatResponse> getRevenueStatsByVendor(String startDate, String endDate) {
+    public PageResponse<VendorRevenueStatResponse> getRevenueStatsByVendor(
+            String startDate,
+            String endDate,
+            Integer pageNumber,
+            Integer pageSize
+    ) {
         // Retrieve invoices within the specified date range using the repository
         List<Invoice> invoices = invoiceRepository.findInvoicesByCreatedAtBetween(startDate, endDate);
 
@@ -48,7 +55,7 @@ public class RevenueStatService {
                 ));
 
         // Convert the map to a list of VendorRevenueStat DTOs
-        return vendorRevenueMap.entrySet().stream()
+        List<VendorRevenueStatResponse> allStats = vendorRevenueMap.entrySet().stream()
                 .map(entry -> {
                     // Get entity
                     Vendor entity = vendorRepository.findVendorById(entry.getKey())
@@ -60,11 +67,31 @@ public class RevenueStatService {
                             .totalRevenue(entry.getValue())
                             .build();
                 })
+                .sorted(Comparator.comparing(VendorRevenueStatResponse::getId))
                 .collect(Collectors.toList());
+
+        // Pagination
+        int totalSize = allStats.size();
+        int startIndex = pageNumber * pageSize;
+        int endIndex = Math.min(startIndex + pageSize, totalSize);
+
+        if (startIndex < totalSize) {
+            return new PageResponse<>(
+                    allStats.subList(startIndex, endIndex),
+                    PageRequest.of(pageNumber, pageSize),
+                    totalSize);
+        } else {
+            return PageResponse.empty();
+        }
     }
 
     @PreAuthorize("hasAuthority('VIEW_FINANCIAL_STATISTIC')")
-    public List<ProductRevenueStatResponse> getRevenueStatsByProduct(String startDate, String endDate) {
+    public PageResponse<ProductRevenueStatResponse> getRevenueStatsByProduct(
+            String startDate,
+            String endDate,
+            Integer pageNumber,
+            Integer pageSize
+    ) {
         // Retrieve invoices within the specified date range using the repository
         List<Invoice> invoices = invoiceRepository.findInvoicesByCreatedAtBetween(startDate, endDate);
 
@@ -77,7 +104,7 @@ public class RevenueStatService {
                 ));
 
         // Convert the map to a list of ProductRevenueStat DTOs
-        return productRevenueMap.entrySet().stream()
+        List<ProductRevenueStatResponse> allStats = productRevenueMap.entrySet().stream()
                 .map(entry -> {
                     // Get entity
                     Product productEntity = productRepository.findProductById(entry.getKey())
@@ -95,10 +122,29 @@ public class RevenueStatService {
                             .build();
                 })
                 .collect(Collectors.toList());
+
+        // Pagination
+        int totalSize = allStats.size();
+        int startIndex = pageNumber * pageSize;
+        int endIndex = Math.min(startIndex + pageSize, totalSize);
+
+        if (startIndex < totalSize) {
+            return new PageResponse<>(
+                    allStats.subList(startIndex, endIndex),
+                    PageRequest.of(pageNumber, pageSize),
+                    totalSize);
+        } else {
+            return PageResponse.empty();
+        }
     }
 
     @PreAuthorize("hasAuthority('VIEW_FINANCIAL_STATISTIC')")
-    public List<CategoryRevenueStatResponse> getRevenueStatsByCategory(String startDate, String endDate) {
+    public PageResponse<CategoryRevenueStatResponse> getRevenueStatsByCategory(
+            String startDate,
+            String endDate,
+            Integer pageNumber,
+            Integer pageSize
+    ) {
         // Retrieve invoices within the specified date range using the repository
         List<Invoice> invoices = invoiceRepository.findInvoicesByCreatedAtBetween(startDate, endDate);
 
@@ -111,12 +157,26 @@ public class RevenueStatService {
                 ));
 
         // Convert the map to a list of CategoryRevenueStat DTOs
-        return categoryRevenueMap.entrySet().stream()
+        List<CategoryRevenueStatResponse> allStats = categoryRevenueMap.entrySet().stream()
                 .map(entry -> CategoryRevenueStatResponse.builder()
                         .name(entry.getKey())
                         .totalRevenue(entry.getValue())
                         .build()
                 )
-                .collect(Collectors.toList());
+                .toList();
+
+        // Pagination
+        int totalSize = allStats.size();
+        int startIndex = pageNumber * pageSize;
+        int endIndex = Math.min(startIndex + pageSize, totalSize);
+
+        if (startIndex < totalSize) {
+            return new PageResponse<>(
+                    allStats.subList(startIndex, endIndex),
+                    PageRequest.of(pageNumber, pageSize),
+                    totalSize);
+        } else {
+            return PageResponse.empty();
+        }
     }
 }
